--- a/test/Info.plist
+++ b/test/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>because</string>
 	<key>LSApplicationQueriesSchemes</key>
@@ -22,6 +26,10 @@
 		<dict>
 			<key>CFBundleURLName</key>
 			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb855296237936322</string>
+			</array>
 		</dict>
 	</array>
 	<key>FacebookDisplayName</key>
